# Tap-pet

./: index.html  overlay.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
public/: overlay.html
src/: overlay.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: global.css.ts  index.tsx
src/entities/character/lib/: getCharaacterSprite.ts  petSprite.ts  xpLevel.ts
src/entities/character/model/: characterStage.ts  index.ts  pet.ts
src/entities/character/ui/: index.ts
src/entities/login/ui/: index.ts
src/features/audio/hook/: index.ts  useBackgroundMusic.ts
src/features/auth/model/: index.ts  loginWithGoogle.ts  logout.ts
src/features/game-engine/hook/: index.ts  useGameEngine.tsx
src/features/game-engine/model/: gameState.ts  useGameEngine.ts
src/features/grow/lib/: calculateXpLevel.ts  index.ts
src/features/grow/model/: growthLevel.ts
src/features/poke/hook/: index.ts  useFriendPoke.ts
src/features/presence/hook/: index.ts  useFriendTyping.ts  usePresence.ts
src/features/settings/model/: loadSettings.ts  types.ts
src/features/typing-counter/hook/: index.ts  useTyping.tsx
src/features/typing-counter/lib/: createTypingHandler.ts  index.ts
src/features/typing-counter/model/: index.ts  typingCount.ts
src/features/usage/hook/: index.ts  useUsageTracker.ts
src/overlay/: OverlayApp.tsx
src/pages/auth-callback/ui/: index.ts
src/pages/home/model/: useOverlaySync.ts
src/shared/ui/: index.ts
(+50 files in other folders)
