[package]
name = "grow-pet"
version = "0.1.0"
description = "Grow Pet - 타자 수로 키우는 펫"
authors = []
edition = "2021"

[lib]
name = "grow_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-store = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# macOS: CGEventTap 직접 사용
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-graphics = { version = "0.23", features = ["highsierra"] }

# Windows / Linux: rdev 사용
[target.'cfg(not(target_os = "macos"))'.dependencies]
rdev = "0.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
